--- a/about-us.html
+++ b/about-us.html
@@ -20,7 +20,7 @@
 
 <div class="right text-right">
   <a href="">Help</a>
-  <a href="">Sign In or Creat an Account</a>
+  <a href="">Sign In OR Creat an Account</a>
   <a href="">My Account <i class="fa fa-angle-down"></i></a>
 </div>
 
@@ -70,7 +70,7 @@
 
 
 <div class="main-container">
-  
+
 
 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s.</p>
 
@@ -166,8 +166,8 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
   <li><a href="">Terms & Conditions</a></li>
   <li><a href="">Careers</a></li>
 </ul>
-                           
-                                  
+
+
 </div>
 </footer>
 
@@ -204,11 +204,9 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
         <span class="close"><img src="images/close.png" alt=""></span>
 
 </div>
-</div>    
+</div>
 
 
 
 </body>
 </html>
-
- 
